tests/compile_time_tests/bad-type-union.stderr
error: cannot derive `TagName` for union types
 --> tests/compile_time_tests/bad-type-union.rs:4:5
  |
4 | pub union ArbitraryUnion {
  |     ^^^^^
